add html form for toppings, crust, and size

--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
   <title>Pizza</title>
 </head>
 <body>
+  <section class="heading">
+    <h1>The Krusty Krab</h1>
+    <p>...we do pizza too!</p>
+  </section>
+  <section class="container">
+    <h3>Order a Pizza!</h3>
+    <form id="pizza">
+      <h3>Size</h3>
+      <select id="size">
+        <option value="small">Small</option>
+        <option value="medium">Medium</option>
+        <option value="large">Large</option>
+      </select>
+      <div class="form-group">
+        <h3>Toppings</h3>
+        <input type="checkbox" id="peppers" name="peppers" value="peppers">
+        <label for="peppers">Peppers</label>
+        <input type="checkbox" id="onions" name="onions" value="onions">
+        <label for="onions">Onions</label>
+        <input type="checkbox" id="olives" name="olives" value="olives">
+        <label for="olives">Olives</label>
+        <input type="checkbox" id="tomato" name="tomato" value="tomato">
+        <label for="tomato">Tomatoes</label>
+        <input type="checkbox" id="pineapple" name="pineapple" value="pineapple">
+        <label for="pineapple">Pineapple</label>
+      </div>
+      <h3>Crust</h3>
+      <select id="crust">
+        <option value="thin">Thin</option>
+        <option value="thick">Thick</option>
+        <option value="stuffed">Stuffed</option>
+      </select>
+    </form>
+  </section>
   
 </body>
 </html>
