--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>The Krusty Krab</h1>
     <p>...we do pizza too!</p>
   </section>
-  <section class="container">
+  
+  <section class="container order">
     <h3>Order a Pizza!</h3>
     <form id="pizza">
       <h3>Size</h3>
@@ -42,6 +43,9 @@
         <option value="thick">Thick</option>
         <option value="stuffed">Stuffed</option>
       </select>
+      <div>
+        <button type="submit" class="btn-success">Order</button>
+      </div>  
     </form>
   </section>
   
