add css styling, background img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>...we do pizza too!</p>
   </section>
   
-  <section class="container order">
+  <section class="container" id="order">
     <h3>Order a Pizza!</h3>
     <form id="pizza">
       <h3>Size</h3>
