add deliver section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       </div>  
     </form>
   </section>
+  <section id="deliver">
+    <h2>Your order is on the way!</h2>
+    <img src="./img/spongebob-pizza-delivery1.jpg" alt="delivery">
+  </section>
   
 </body>
 </html>
