add section to display order

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <section id="deliver">
     <h2>Your order is on the way!</h2>
     <img src="./img/spongebob-pizza-delivery1.jpg" alt="delivery">
+    <p> Your Order:<span id="#my-order"></span></p>
     <p>Your total will be: $<span id="cost"></span></p>
   </section>
   
