create displayOrder variable to push order to page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="deliver">
     <h2>Your order is on the way!</h2>
     <img src="./img/spongebob-pizza-delivery1.jpg" alt="delivery">
-    <p> Your Order:<span id="#my-order"></span></p>
+    <p> Your Order:<span class="#my-order"></span></p>
   </section>
   
 </body>
