--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       </select>
       <div class="form-group">
         <h3>Toppings</h3>
-        <input type="checkbox" id="peppers" name="peppers" value="peppers">
+        <input type="checkbox" id="peppers" name="topping" value="peppers">
         <label for="peppers">Peppers</label>
-        <input type="checkbox" id="onions" name="onions" value="onions">
+        <input type="checkbox" id="onions" name="topping" value="onions">
         <label for="onions">Onions</label>
-        <input type="checkbox" id="olives" name="olives" value="olives">
+        <input type="checkbox" id="olives" name="topping" value="olives">
         <label for="olives">Olives</label>
-        <input type="checkbox" id="tomato" name="tomato" value="tomato">
+        <input type="checkbox" id="tomato" name="topping" value="tomato">
         <label for="tomato">Tomatoes</label>
-        <input type="checkbox" id="pineapple" name="pineapple" value="pineapple">
+        <input type="checkbox" id="pineapple" name="topping" value="pineapple">
         <label for="pineapple">Pineapple</label>
       </div>
       <h3>Crust</h3>
