add input for first/last name

--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     <h1>The Krusty Krab</h1>
     <p>...we do pizza too!</p>
   </section>
-  
+  <!-- Order Form -->
   <section class="container" id="order">
     <h3>Order a Pizza!</h3>
     <form id="pizza">
       <h3>Size</h3>
+      <div class="form-group spacing">
+        <label class="name" for="name">First Name</label>
+        <input type="text" id="first-name">
+      </div>
+      <div class="form-group spacing">
+        <label class="name" for="name">Last Name</label>
+        <input type="text" id="last-name">
+      </div>
       <select id="size">
         <option value="small">Small</option>
         <option value="medium">Medium</option>
