--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
         <label class="name" for="name">Last Name</label>
         <input type="text" id="last-name">
       </div>
-      <select id="size">
-        <option value="small">Small</option>
-        <option value="medium">Medium</option>
-        <option value="large">Large</option>
-      </select>
+      <div class="spacing">
+        <h3>Size</h3>
+        <select id="size">
+          <option value="Small">Small ... $10</option>
+          <option value="Medium">Medium ... $15</option>
+          <option value="Large">Large ... $20</option>
+        </select>
+      </div>
       <div class="form-group">
         <h3>Toppings</h3>
         <input type="checkbox" id="peppers" name="topping" value="peppers">
@@ -45,21 +48,26 @@
         <input type="checkbox" id="pineapple" name="topping" value="pineapple">
         <label for="pineapple">Pineapple</label>
       </div>
-      <h3>Crust</h3>
-      <select id="crust">
-        <option value="thin">Thin</option>
-        <option value="thick">Thick</option>
-        <option value="stuffed">Stuffed</option>
-      </select>
-      <div>
+      <div class="spacing">
+        <h3>Crust</h3>
+        <select id="crust">
+          <option value="Thin">Thin</option>
+          <option value="Thick">Thick</option>
+          <option value="Stuffed">Stuffed</option>
+        </select>
+      </div>
         <button type="submit" class="btn-success">Order</button>
       </div>  
     </form>
   </section>
   <section id="deliver">
-    <h2>Your order is on the way!</h2>
     <img src="./img/spongebob-pizza-delivery1.jpg" alt="delivery">
-    <p> Your Order:<span class="#my-order"></span></p>
+    <p> <span id="name"></span> your order is on the way!</p>
+    <p>Size: <span class="display-size"></span></p>
+    <p>Toppings: <span class="display-toppings"></span></p>
+    <p>Crust: <span class="display-crust"></span></p>
+    <p>Total: <span class="display-price"></span>$</p>
+    <p><span class="clickable">Click to go back to order page!</span></p>
   </section>
   
 </body>
