update css styling, format order and deliver section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </div>  
     </form>
   </section>
+  <!-- Display Order -->
   <section id="deliver">
     <img src="./img/spongebob-pizza-delivery1.jpg" alt="delivery">
     <p> <span id="name"></span> your order is on the way!</p>
