fix the value of the sizes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="spacing">
         <h3>Size</h3>
         <select id="size">
-          <option value="Small">Small ... $10</option>
-          <option value="Medium">Medium ... $15</option>
-          <option value="Large">Large ... $20</option>
+          <option value="small">Small ... $10</option>
+          <option value="medium">Medium ... $15</option>
+          <option value="large">Large ... $20</option>
         </select>
       </div>
       <div class="form-group">
